- Fix Bug #40872 (inconsistency in offsetSet, offsetExists treatment of string enclosed integers)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@232197 c90b9560-bf6c-de11-be94-00142212c4b1